--- a/package.json
+++ b/package.json
@@ -25,20 +25,24 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/graphql": "^10.0.22",
+    "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/platform-fastify": "^9.0.11",
     "agentkeepalive": "^4.2.1",
     "apollo-server-express": "^3.10.2",
     "axios": "^0.27.2",
     "cheerio": "1.0.0-rc.12",
+    "eval": "^0.1.8",
     "fastify": "3.17.0",
     "fastify-accepts": "^2.3.0",
     "got-scraping": "^3.2.10",
     "graphql": "^16.6.0",
+    "js-beautify": "^1.14.6",
     "moment": "^2.29.4",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "safe-eval": "^0.4.1",
     "url-query-handle": "^1.0.9",
     "webpack": "5.0.0"
   },
