--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
         "test:e2e": "jest --config ./test/jest-e2e.json"
     },
     "engines": {
-        "node": "16.0.0"
+        "node": "16.x"
     },
     "dependencies": {
         "@nestjs/apollo": "^10.0.22",
