--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "agentkeepalive": "^4.2.1",
         "apollo-server-core": "^3.10.2",
         "apollo-server-express": "^3.10.2",
+        "apollo-server-plugin-response-cache": "^3.7.1",
         "axios": "^0.27.2",
         "cheerio": "1.0.0-rc.12",
         "eval": "^0.1.8",
@@ -46,6 +47,7 @@
         "graphql": "^16.6.0",
         "js-beautify": "^1.14.6",
         "moment": "^2.29.4",
+        "nestjs-gql-cache-control": "^0.1.2",
         "reflect-metadata": "^0.1.13",
         "rimraf": "^3.0.2",
         "rxjs": "^7.2.0",
